generic repository created

--- a/blog/packages/repositories.config
+++ b/blog/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Blog.Data\packages.config" />
   <repository path="..\blog\packages.config" />
+  <repository path="..\BlogTest\packages.config" />
 </repositories>
