--- a/blog/packages/repositories.config
+++ b/blog/packages/repositories.config
@@ -3,4 +3,6 @@
   <repository path="..\Blog.Data\packages.config" />
   <repository path="..\blog\packages.config" />
   <repository path="..\BlogTest\packages.config" />
+  <repository path="..\DataBaseTestClient\packages.config" />
+  <repository path="..\TestClient\packages.config" />
 </repositories>
