--- a/blog/blog/Web.config
+++ b/blog/blog/Web.config
@@ -10,8 +10,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-blog-20140609143507;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="BlogConnectionString" connectionString="Data Source=.;Initial Catalog=tchatchouaBlog;Integrated Security=true" providerName="System.Data.SqlClient" />
+    <add name="BlogConnectionString" connectionString="Current Language=british;User ID=sa;Password=sa123;Initial Catalog=tchatchouaBlog;Data Source=localhost" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
