--- a/blog/blog/blog.csproj
+++ b/blog/blog/blog.csproj
@@ -181,17 +181,22 @@
     <Compile Include="Codes\Authentication\SerializableUser.cs" />
     <Compile Include="Codes\Authentication\UserPrincipal.cs" />
     <Compile Include="Codes\DepedencyInjection\DepedencyModule.cs" />
+    <Compile Include="Codes\DTO\OperationStatus.cs" />
     <Compile Include="Codes\Services\AuthService.cs" />
+    <Compile Include="Codes\Services\BloggingService.cs" />
+    <Compile Include="Codes\Services\IBloggingService.cs" />
     <Compile Include="Codes\Services\IAuthService.cs" />
     <Compile Include="Codes\ViewBase.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Codes\BaseController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\PostViewModel.cs" />
     <Compile Include="Models\RegisterViewModel.cs" />
     <Compile Include="Models\UserViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -309,6 +314,8 @@
     <None Include="Scripts\jquery-2.1.1.min.map" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Post\Index.cshtml" />
+    <Content Include="Views\Post\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Blog.Data\Blog.Data.csproj">
