--- a/blog/blog/blog.csproj
+++ b/blog/blog/blog.csproj
@@ -316,6 +316,8 @@
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Post\Index.cshtml" />
     <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Post\Detail.cshtml" />
+    <Content Include="Views\Post\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Blog.Data\Blog.Data.csproj">
